# test_atsame70

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs
