[package]
name = "test_atsame70"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atsame7xx-hal = {path="../atsame7xx-hal", features=["same70q21b"]}
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
embedded-hal = "0.2.3"
panic-semihosting = "0.5.3"
cortex-m-semihosting = "0.3.3"
